[project]
name = "uc-intg-smartthings"
dynamic = ["version"]
description = "Samsung SmartThings integration for Unfolded Circle Remote"
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}

dependencies = [
    "ucapi-framework>=1.8.4",
    "ucapi>=0.5.2",
    "aiohttp>=3.9.0",
    "certifi>=2023.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uc_intg_smartthings"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_smartthings.__version__"}
